# kcm_ublue

./: .gitignore  CLAUDE.md  CMakeLists.txt  Containerfile  README.md  justfile  kcm_ublue.spec  lefthook.yml
.github/workflows/: build-sysext.yaml
docs/: design.md
src/: CMakeLists.txt  imagevariant.cpp  imagevariant.h  kcm_ublue.json  rebase.cpp  rebase.h  rebasefilewatcher.cpp  rebasefilewatcher.h  rebasemanager.cpp  rebasemanager.h  rebaseservice.cpp  rebaseservice.h  systemdunitmonitor.cpp  systemdunitmonitor.h  ubluesettings.cpp  ubluesettings.h  updateservice.cpp  updateservice.h
src/ublue/: deployment_model.cpp  deployment_model.h  product.h
src/ui/: deployments.qml  main.qml  rebase.qml
system/usr/lib/systemd/system/: ublue-rebase@.service
system/usr/libexec/: ublue-rebase
system/usr/share/applications/: kcm_ublue.desktop
system/usr/share/polkit-1/actions/: org.ublue.rebase.policy
system/usr/share/polkit-1/rules.d/: 21-ublue-rebase.rules  22-ublue-rebase-systemd.rules
tests/: test_imagevariant.cpp
